bk_ida/gccida/c3/gen_eh_return
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_eh_return/src/insn-emit.c:15008:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_eh_return/src/insn-emit.c:15012:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v3); 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_eh_return/src/obj/insn-emit.o] Error 1
